made resource selector buttons into a single-line overflow button row - added fade on the right for affordance but it looks a little strange now, will fix later

--- a/do-not-touch/theme-colors/custom.scss
+++ b/do-not-touch/theme-colors/custom.scss
@@ -460,3 +460,25 @@ table.table-h {
   border: none;
   background-color: transparent;
 }
+
+.bp-overflow-buttons {
+  overflow: scroll;
+  & .bp-buttons {
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    & .bp-sec-button {
+      display: inline-block;
+    }
+  }
+
+  &:before {
+    display: block;
+    content:'\200C';
+    width:100%;
+    height:100%;    
+    position:absolute;
+    left:0;
+    top:0;
+    background:linear-gradient(to right, transparent 90%, white);
+  }
+}
